# example-lib

./: .gitignore  CMakeLists.txt  README.md  west.yml
src/: example_lib.c
